--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,5 @@
   "bracketSpacing": true,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "singleAttributePerLine": true
+  "singleAttributePerLine": false
 }
