--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
-
     "@radix-ui/react-tooltip": "^1.1.6",
-
     "chart.js": "^4.4.7",
-
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
@@ -23,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
